# mcpdocs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mcpdocs/: __init__.py  __main__.py  cli.py  exceptions.py  generator.py  introspector.py  renderer.py
mcpdocs/integrations/: fastapi.py
mcpdocs/models/: __init__.py  prompt_spec.py  resource_spec.py  server_spec.py  tool_spec.py
mcpdocs/templates/: base.html  prompts.html  resources.html  tools.html
mcpdocs/templates/static/: style.css
mcpdocs/tests/: conftest.py  test_generator.py  test_introspector.py  test_models.py  test_renderer.py
mcpdocs/tests/servers/: full_server.py  minimal_server.py
